Agregando repository, controller y service para Owner
